# logos-delivery-module

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QExpected.h  README.md  SUBMODULE_STATUS.md  api_call_handler.h  delivery_module_interface.h  delivery_module_plugin.cpp  delivery_module_plugin.h  flake.nix  metadata.json
examples/: CMakeLists.txt  simple.cpp
nix/: default.nix  examples.nix  header.nix  include.nix  lib.nix
src/: delivery_module_plugin.cpp  delivery_module_plugin.h
test/: test_create_node_integration.cpp
